This file lists all changes made to the game driver in all glory detail.
See the file HISTORY for a user-oriented summary of all the changes.

04-Jan 2009 (Zesstra)
  - (interpret.c, interpret.h)
    Changed ASSIGN_EVAL_COST to a static inline function assign_eval_cost_inl()
      and use it consistently in interpret.c.
    Changed MAX_SHIFT to a static const.
  - (mstrings.h, mstrings.c, strfuns.c)
    Changed some code defines to static inline functions.
    Renamed the variables mstr_tabled and mstr_untabled to mstr_tabled_count
      and mstr_untabled_count. (They had the same name as the old defines which
      are now functions).
    Removed unused and now superfluous ref_mstring_safe, mstring_ref(),
      deref_mstring_safe, mstring_deref(), because ref_mstring() and
      deref_mstring() can now handle arguments with side-effects.
    Added some casts to remove the const from const arguments when passing them
    off to get_txt(). (Don't worry, it is only cosmetic and temporary.)
  - (random.h, random.c, main.c, autoconf/configure.in, config.h.in, efuns.c,
      random/*)
    Exchanged the Mersenne Twister (pseudo random number generator) by the
      SIMD-oriented Fast Mersenne Twister (SFMT) to support random numbers up
      to 2^63-1 on 64 bit platforms:
      http://www.math.sci.hiroshima-u.ac.jp/~m-mat/MT/SFMT/
      Additionally, the period length can be configured now. The SFMT
      faciliates a better equidistribution and a faster recovery from a
      0-excess state as well. (Bug #527)
    Added the possibility to seed the PRNG from arbitrary files or devices by
      using the commandline option --randomdevice. The default device is
      /dev/urandom. If that is not readable, the driver falls back to seed the
      PRNG with the system time.

03-Jan 2009 (Zesstra)
  - (efuns.c, efuns.h, func_spec)
    Extended present_clone() to optionally search for the <n>th object in the
    environment.
  - (port.h)